# omni_navigation

./: .gitignore  README.md
src/odom_interpolator/: CMakeLists.txt  README.md  package.xml
src/odom_interpolator/config/: odom_interpolator.yaml  pid_controller.yaml
src/odom_interpolator/launch/: odom_interpolator_launch.py  pid_controller_launch.py
src/odom_interpolator/src/: odom_interpolator_node.cpp
src/rm_interfaces/: CMakeLists.txt  README.md  package.xml
src/rm_interfaces/.github/workflows/: ci.yml
src/rm_interfaces/msg/referee/: GameRobotHP.msg  GameStatus.msg  RobotStatus.msg
src/rm_interfaces/msg/vision/: TrackGoal.msg
src/sentry_behavior/: CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.repos  package.xml
src/sentry_behavior/.github/workflows/: ci.yml
src/sentry_behavior/behavior_trees/: Project.btproj  RMUC.xml  a.xml  b.xml  models.xml  rmul.xml  test.xml  test_navigate.xml
src/sentry_behavior/include/sentry_behavior/: behavior_machine.hpp  custom_types.hpp  goal_publisher.hpp  referee_snapshot.hpp  sentry_behavior_client.hpp  sentry_behavior_server.hpp  strategies.hpp
src/sentry_behavior/include/sentry_behavior/viz/: state_viz_server.hpp
src/sentry_behavior/launch/: sentry_behavior_launch.py
src/sentry_behavior/params/: sentry_behavior.yaml
src/sentry_behavior/plugins/action/: battlefield_information.cpp  navigate_to.cpp  pub_goal.cpp  pursuit.cpp
src/sentry_behavior/plugins/condition/: is_ally_base_hp_low.cpp  is_attacked.cpp  is_detect_enemy.cpp  is_enemy_fortress_occupied.cpp  is_game_status.cpp  is_hp_add.cpp  is_outpost_ok.cpp  is_outpost_status_ok.cpp  is_rfid_detected.cpp  is_status_ok.cpp
src/sentry_behavior/plugins/control/: recovery_node.cpp
src/sentry_behavior/plugins/decorator/: rate_controller.cpp  tick_after_timeout_node.cpp
src/sentry_behavior/src/: .goutputstream-RV3X62  behavior_machine.cpp  goal_publisher.cpp  sentry_behavior_client.cpp  sentry_behavior_node.cpp  sentry_behavior_server.cpp  state_viz_server.cpp  strategies.cpp
src/sentry_match_recorder/: README.md  package.xml  setup.cfg  setup.py
src/sentry_match_recorder/config/: recorder.yaml
src/sentry_match_recorder/launch/: match_recorder_launch.py
src/sentry_match_recorder/sentry_match_recorder/: match_recorder_node.py  merge_sortie.py  topics.yaml
src/sentry_match_recorder/test/: test_merge_sortie.py
src/sentry_nav/fake_vel_transform/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/fake_vel_transform/include/fake_vel_transform/: fake_vel_transform.hpp
src/sentry_nav/fake_vel_transform/src/: fake_vel_transform.cpp
src/sentry_nav/ign_sim_pointcloud_tool/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/nav2_plugins/: CMakeLists.txt  CONTRIBUTING.md  README.md  behavior_plugin.xml  costmap_plugins.xml  package.xml
src/sentry_nav/nav2_plugins/.github/workflows/: ci.yml
src/sentry_nav/nav2_plugins/src/behaviors/: back_up_free_space.cpp
src/sentry_nav/nav2_plugins/src/layers/: intensity_voxel_layer.cpp
src/sentry_nav/odom_bridge/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/odom_bridge/include/odom_bridge/: odom_bridge.hpp
src/sentry_nav/odom_bridge/src/: odom_bridge.cpp
src/sentry_nav/omni_pid_pursuit_controller/: CMakeLists.txt  CONTRIBUTING.md  README.md  omni_pid_pursuit_controller.xml  package.xml
src/sentry_nav/omni_pid_pursuit_controller/.github/workflows/: ci.yml
src/sentry_nav/omni_pid_pursuit_controller/include/omni_pid_pursuit_controller/: omni_pid_pursuit_controller.hpp
src/sentry_nav/omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp  pid.cpp
src/sentry_nav/sentry_nav/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/small_gicp_relocalization/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/small_gicp_relocalization/include/small_gicp_relocalization/: localization_health.hpp  scan_context.hpp  small_gicp_relocalization.hpp
src/sentry_nav/small_gicp_relocalization/src/: build_scan_context_db.cpp  scan_context.cpp  small_gicp_relocalization.cpp
src/sentry_nav_bringup/: CMakeLists.txt  README.md  package.xml
src/sentry_nav_bringup/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/sentry_nav_bringup/config/reality/: mid360_user_config.json  nav2_params.yaml
src/sentry_nav_bringup/config/simulation/: nav2_params.yaml
src/sentry_nav_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rm_multi_navigation_simulation_launch.py  rm_navigation_reality_launch.py  rm_navigation_simulation_launch.py  rm_sentry_launch.py  rm_simulation_all_launch.py  robot_state_publisher_launch.py  rviz_launch.py  slam_launch.py
src/sentry_nav_bringup/rviz/: nav2_default_view.rviz
src/sentry_robot_description/: README.md  dependencies.repos  package.xml
src/sentry_robot_description/env-hooks/: gazebo.dsv.in
src/sentry_robot_description/launch/: robot_description_launch.py
src/sentry_robot_description/resource/models/mid360/: model.sdf.xmacro
src/sentry_robot_description/resource/xmacro/: infantry_robot.sdf.xmacro  sentry_robot.sdf.xmacro  simulation_robot.sdf.xmacro
src/serial/serial_driver/: CMakeLists.txt  README.md  package.xml
src/serial/serial_driver/example/: README.md  navigation_auto.c  navigation_auto.h
src/serial/serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/serial/serial_driver/launch/: serial_driver.launch.py
src/serial/serial_driver/protocol/: generate.py  protocol.yaml
src/serial/serial_driver/protocol/templates/: navigation_auto.c.j2  navigation_auto.h.j2  packet.hpp.j2  protocol_py.j2
src/serial/serial_driver/src/: rm_serial_driver.cpp
src/simulator/rmoss_gazebo/rmoss_gz_bridge/: CMakeLists.txt
src/simulator/rmoss_gazebo/rmoss_gz_bridge/src/: pose_bridge_node.cpp  rfid_bridge_node.cpp
src/simulator/rmoss_gazebo/rmoss_gz_plugins/: CMakeLists.txt
src/simulator/rmoss_gazebo/rmoss_gz_plugins/env-hooks/: gazebo.dsv.in
src/simulator/rmoss_gazebo/rmoss_gz_plugins/test/scripts/: shoot_pub.sh
(+141 files in other folders)
