<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentry_behavior</name>
  <version>0.0.0</version>
  <description>
    Tactical decision package for RoboMaster sentry robot. Hand-rolled hierarchical state machine (lifecycle x tactical guard-table) driven by referee-system state; publishes goals to /goal_pose. Includes an embedded TCP NDJSON state-visualization protocol.
  </description>

  <maintainer email="2218681402@qq.com">boombroke</maintainer>
  <license>Apache-2.0</license>
  <author email="2218681402@qq.com">boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rm_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
