<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentry_nav_bringup</name>
  <version>1.3.1</version>
  <description>哨兵机器人导航总入口包，汇集实车 launch 脚本、Nav2 参数、地图、先验点云、RViz 布局及 Nav2 内置行为树 XML。</description>
  <maintainer email="2218681402@qq.com">boombroke</maintainer>
  <license>Apache-2.0</license>
  <author email="2218681402@qq.com">boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>navigation2</build_depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_plugins</exec_depend>
  <exec_depend>sentry_nav</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>point_lio</exec_depend>
  <exec_depend>odom_bridge</exec_depend>
  <exec_depend>terrain_analysis</exec_depend>
  <exec_depend>terrain_analysis_ext</exec_depend>
  <exec_depend>omni_pid_pursuit_controller</exec_depend>
  <exec_depend>small_gicp_relocalization</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>sentry_robot_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
