<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ign_sim_pointcloud_tool</name>
  <version>1.3.1</version>
  <description>将 Gazebo Harmonic 仿真中 Mid360 原始点云转换为 Velodyne PointXYZIRT 格式，供 Point-LIO 仿真使用。per-point time 单位为秒，point_lio 须设 preprocess.timestamp_unit=0。</description>

  <maintainer email="2218681402@qq.com">boombroke</maintainer>

  <license>Apache-2.0</license>
  <author email="2218681402@qq.com">boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
