<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_bridge</name>
  <version>1.0.0</version>
  <description>将 Point-LIO 里程计与注册点云桥接到 ROS2 TF 树与 Nav2 里程计，合并 loam_interface 与 sensor_scan_generation 为单一 Composable Node。</description>
  <maintainer email="2218681402@qq.com">boombroke</maintainer>
  <license>Apache-2.0</license>
  <author email="2218681402@qq.com">boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
