<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>small_gicp_relocalization</name>
  <version>1.0.4</version>
  <description>基于 small_gicp 的全局重定位节点：将累积注册点云与先验 PCD 地图对齐，发布 map→odom TF，支持周期定位、深度验证与 Scan Context 全局重定位三层架构。</description>
  <maintainer email="2218681402@qq.com">boombroke</maintainer>
  <license>Apache-2.0</license>
  <author email="2218681402@qq.com">boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>small_gicp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
